--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build"
+    "export": "next build && next export"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.1.2",
